elementary level css styling 5 - custom flexbox layout & style

--- a/index.html
+++ b/index.html
@@ -1,58 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Pricing</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="pricing">
-            <!-- card 1 -->
-            <div class="card">
-                <h2>Free</h2>
-                <p class="price"><sup>$</sup>0</p>
-                <p class="price-info"><strong>Great for Starters</strong></p>
-                <p class="main-text">Discover to create your first project</p>
-                <a href="#" class="btn">Get Started</a>
-                <ul>
-                    <li>1 User</li>
-                    <li>5 Projects</li>
-                    <li>10GB Storage</li>
-                    <li>Priority </li>
-                </ul>
-            </div>
-            <!-- card 2 -->
-            <div class="card"></div>
-                <h2>Pro</h2>
-                <p class="price"><sup>$</sup>7<span>/mo</span></p>
-                <p class="price-info"><strong>For Planned Projects</strong></p>
-                <p class="main-text">Bring your design to 
-                    next level & export them</p>
-                <a href="#" class="btn">Get Started</a>
-                <ul>
-                    <li>5 User</li>
-                    <li>50 Projects</li>
-                    <li>100GB Storage</li>
-                    <li>Priority </li>
-                </ul>
-            </div>
-            <!-- card 3 -->
-            <div class="card"></div>
-                <h2>Enterprise</h2>
-                <p class="price"><sup>$</sup>12<span>/mo </span></p>
-                <p class="price-info"><strong>For Professional use</strong></p>
-                <p class="main-text">Enjoy limitless use with
-                     interactive export</p>
-                <a href="#" class="btn">Get Started</a>
-                <ul>
-                    <li>Unlimited User</li>
-                    <li>Unlimited Projects</li>
-                    <li>Unlimited Storage</li>
-                    <li>Priority </li>
-                </ul>
-            </div>
-        </div>        
+      s
+      <div class="pricing">
+        <!-- card 1 -->
+        <div class="card card-free">
+          <h2>Free</h2>
+          <p class="price"><sup>$</sup>0</p>
+          <p class="price-info"><strong>Great for Starters</strong></p>
+          <p class="main-text">Discover to create your first project</p>
+          <a href="#" class="btn">Get Started</a>
+          <ul>
+            <li><i class="fas fa-check"></i> 1 User</li>
+            <li><i class="fas fa-check"></i> Priority</li>
+            <li><i class="fas fa-check"></i> 10GB Storage</li>
+            <li><i class="fas fa-check"></i> 5 Projects</li>
+          </ul>
+        </div>
+        <!-- card 2 -->
+        <div class="card card-pro">
+          <h2>Pro</h2>
+          <p class="price"><sup>$</sup>7<span>/mo</span></p>
+          <p class="price-info"><strong>For Planned Projects</strong></p>
+          <p class="main-text">Bring your design to next level & export them</p>
+          <a href="#" class="btn btn-primary">Get Started</a>
+          <ul>
+            <li><i class="fas fa-check"></i> 5 User</li>
+            <li><i class="fas fa-check"></i> 50 Projects</li>
+            <li><i class="fas fa-check"></i> 100GB Storage</li>
+            <li><i class="fas fa-check"></i> Priority</li>
+          </ul>
+        </div>
+        <!-- card 3 -->
+        <div class="card card-enterprise">
+          <h2>Enterprise</h2>
+          <p class="price"><sup>$</sup>12<span>/mo </span></p>
+          <p class="price-info"><strong>For Professional use</strong></p>
+          <p class="main-text">Enjoy limitless use with interactive export</p>
+          <a href="#" class="btn">Get Started</a>
+          <ul>
+            <li><i class="fas fa-check"></i> Unlimited User</li>
+            <li><i class="fas fa-check"></i> Unlimited Projects</li>
+            <li><i class="fas fa-check"></i> Unlimited Storage</li>
+            <li><i class="fas fa-check"></i> Priority</li>
+          </ul>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
